--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,4 +14,4 @@ jobs:
         server: ftp.anzissquid.my.id
         username: ${{ secrets.ftp_user }}
         password: ${{ secrets.ftp_password }}
-        server-dir: /anzissquid.my.id/anzissquid/
+        server-dir: /anzissquid.my.id/htdocs/
